--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "15.1.1",
     "next-nprogress-bar": "^2.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
