--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "commit": "git cz"
   },
   "dependencies": {
+    "chart.js": "^4.0.0",
     "next": "15.1.1",
     "next-nprogress-bar": "^2.4.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
   },
