--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "commit": "git cz"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "chart.js": "^4.0.0",
     "next": "15.1.1",
     "next-nprogress-bar": "^2.4.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.1",
+    "react-icons": "^5.4.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
