--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-nprogress-bar": "^2.4.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.1",
